+ add "read buffer" option + add possibility to set XML parser options - remove legacy Symfony dependency + fix tests and add new tests

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "alex.oleshkevich/fast-xml-parser",
    "autoload": {
         "psr-0": {
-            "FastXml": "src"
+            "FastXml": "src",
+            "FastXmlTest": "tests"
         }
     }
 }
