php version bump

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,9 @@
 {
-    "name": "alex.oleshkevich/fast-xml-parser",
+   "name": "alex.oleshkevich/fast-xml-parser",
+   "description": "Fast SAX XML parser for PHP",
+    "require": {
+        "php": ">=5.4.0"
+    },
    "autoload": {
         "psr-0": {
             "FastXml": "src",
