--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,16 @@
 {
    "name": "alex.oleshkevich/fast-xml-parser",
    "description": "Fast SAX XML parser for PHP",
+    "homepage": "https://github.com/alex-oleshkevich/php-fast-xml-parser",
+    "authors": [
+        {
+            "name": "Alex Oleshkevich",
+            "email": "alex.oleshkevich@gmail.com",
+            "homepage": "http://github.com/alex-oleshkevich"
+        }
+    ],
+    "type": "library",
+    "license": "MIT",
     "require": {
         "php": ">=5.4.0"
     },
@@ -9,5 +19,8 @@
             "FastXml": "src",
             "FastXmlTest": "tests"
         }
-    }
+    },
+   "require-dev": {
+      "phpunit/phpunit": "^6.5"
+   }
 }
