Remove support of PHP 5.5 and below. Add support PHP 7.0-7.2. Fix tests. Array php 5.4+ syntax.

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,10 @@
    "name": "alex.oleshkevich/fast-xml-parser",
    "description": "Fast SAX XML parser for PHP",
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=5.6.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "*"
     },
    "autoload": {
         "psr-0": {
