--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,7 @@ php:
   - 7.2
   - 7.3
   - 7.4
-  
-before_install:
- - curl -sS https://getcomposer.org/installer | php
-
-before_script:
- - php composer.phar install --dev
- - php composer.phar dump
 
 script:
- - (phpunit)
+ - php vendor/bin/phpunit
  
