require ext-mbstring

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "type": "library",
     "license": "MIT",
     "require": {
-        "php": ">=7.0.0"
+        "php": ">=7.0.0",
+        "ext-mbstring": "*"
     },
    "autoload": {
         "psr-0": {
